Regex parsing to postfix is Done!

--- a/front_end.ipynb
+++ b/front_end.ipynb
@@ -8,16 +8,8 @@
     "## Programming assignment : Part 1 : input regex -> NFA\n",
     "\n",
     "Table of Contents:\n",
-    "1. [Introduction](#section1)\n",
-    "\n"
+    "1. [The Shunting Yard Algorithm](#1.-Introduction---Shunting-Yard-Algorithm)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -34,7 +26,8 @@
     "converting something like `(A+B) * (C | D)` to `A+B . * CD |.`\n",
     "\n",
     "### Features\n",
-    ". No recursion or trees are needed.\n",
+    ". No recursion => Iterative approach.\n",
+    ". No trees are needed.\n",
     ". No Ambiguities.\n",
     ". Handles precedence of operators.\n",
     "\n",
@@ -46,40 +39,118 @@
     "3. stack : The stack used in the algorithm (list)\n",
     "\n",
     "### Algorithm\n",
+    "0. preprocess the infix to add a `.` between the operands where needed. (eg: `A(B|C)` => `A.(B|C)`). also substitute ranges like `a-z` with the union of all the characters in the range.\n",
     "1. Create an empty stack for operators. Create an empty list for the output.\n",
     "2. For each character in the infix :\n",
     "    - If char is `(` or `[` => push to stack\n",
     "    - If char is `)` or `]` => pop from stack until nearest matching `(` or `[` , append to output\n",
-    "    - \n",
-    "    - "
+    "    - If char is an operator => pop from stack until the top of the stack has a lower precedence than the current operator, then push the current operator to the stack\n",
+    "    - If char is an operand/normal character => append to output\n",
+    "3. Pop all the remaining operators from the stack and append to the output\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Important declarations\n",
     "# -----------------------\n",
+    "# Dictionary containing the precedence of the operators\n",
     "regex_operators_precedence = {\n",
     "    '*' : 5,\n",
     "    '+' : 4,\n",
     "    '?' : 3,\n",
     "    '.' : 2,\n",
     "    '|' : 1,\n",
+    "    '(' : 0,\n",
+    "    ')' : 0\n",
     "}\n",
-    "\n"
+    "\n",
+    "alphanumeric = 'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789'\n",
+    "alphabetic = 'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preprocessing ..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Utility functions\n",
+    "# -----------------\n",
+    "def preprocess_regex(regex):\n",
+    "    \"\"\"\n",
+    "    Preprocess the regex to do the following:\n",
+    "        1-[ranges] add OR's | between in square brackets characters\n",
+    "        2-[ranges] replace dash - with the corresponding sequence of characters with OR's between them\n",
+    "        3-add the missing '.' operators\n",
+    "    \"\"\"\n",
+    "    #step 1 : add OR's | between in square brackets characters without -\n",
+    "    square_brackets_open = False\n",
+    "    for i in range(len(regex)):\n",
+    "        if regex[i] == '[':\n",
+    "            square_brackets_open = True\n",
+    "        elif regex[i] == ']':\n",
+    "            square_brackets_open = False\n",
+    "        elif square_brackets_open and regex[i] != '-' and regex[i] in alphanumeric and i+1 < len(regex) and regex[i+1] in alphanumeric:\n",
+    "            regex = regex[:i+1] + '|' + regex[i+1:]\n",
+    "    print(f\"After step 1 : {regex}\")\n",
+    "    #step 2 : replace dash - with the corresponding sequence of characters with OR's between them\n",
+    "    i = 0\n",
+    "    while i < len(regex):\n",
+    "        c = regex[i]\n",
+    "        print(f\"i = {i}, c = {c}\")\n",
+    "        if c == '-':\n",
+    "            #pop the last element from the stack\n",
+    "            first = regex[i-1] if regex[i-1] in alphanumeric else None\n",
+    "            if not first:\n",
+    "                raise ValueError('Range error: element after - is not alphanumeric')\n",
+    "            #access Char + 1\n",
+    "            last = regex[i + 1] if i+1 < len(regex) and regex[i+1] in alphanumeric else None\n",
+    "            if not last:\n",
+    "                raise ValueError('Range error: element after - is not alphanumeric')\n",
+    "            #throw the - operator from the regex\n",
+    "            operating_list = []\n",
+    "            for char in alphanumeric:\n",
+    "                if alphanumeric.index(char) > alphanumeric.index(first) and alphanumeric.index(char) < alphanumeric.index(last):\n",
+    "                    #append | between the characters\n",
+    "                    # if char != last:\n",
+    "                    operating_list.append('|')\n",
+    "                    operating_list.append(char)\n",
+    "            operating_list.append('|')\n",
+    "            #replace - in regex with the operating list\n",
+    "            #using i to get the index of the first character in the range\n",
+    "            regex = regex[:i] + ''.join(operating_list) + regex[i+1:]\n",
+    "            i += len(operating_list)\n",
+    "        i += 1\n",
+    "\n",
+    "    print(f\"After step 2 : {regex}\")\n",
+    "    #step 3 : add the missing '.' operators\n",
+    "    check1_list = ['*', '+', '?', ')', ']']\n",
+    "    new_regex = ''\n",
+    "    for i,c in enumerate(regex):\n",
+    "        if i > 0 and c in check1_list and i+1 < len(regex) and regex[i+1] not in check1_list:\n",
+    "            new_regex += c + '.'\n",
+    "        elif c in alphanumeric and i+1 < len(regex) and ((regex[i+1] in alphanumeric) or regex[i+1] in ['(', '[']):\n",
+    "            new_regex += c + '.'\n",
+    "        else:\n",
+    "            new_regex += c\n",
+    "    print(f\"After step 3 : {new_regex} Preprocessed!\")\n",
+    "    return new_regex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,25 +164,154 @@
     "    Returns:\n",
     "    str: The postfix regular expression.\n",
     "    \"\"\"\n",
+    "    regex = preprocess_regex(regex)\n",
     "    # Create a stack to hold the operators\n",
     "    stack = []\n",
     "    # Create a list to hold the postfix regular expression\n",
     "    postfix = []\n",
-    "    square_brackets_open = False\n",
     "    # Iterate over the characters in the infix regular expression\n",
-    "    for char in regex:\n",
+    "    for index,char in enumerate(regex):\n",
     "        #1. '(' or '[': Push it onto the stack\n",
     "        if char == '(' or char == '[':\n",
     "            stack.append(char)\n",
-    "            square_brackets_open = True if char == '[' else False\n",
     "        #2. ')' or ']': Pop operators from the stack and append them to the postfix list until '(' or '[' is found\n",
-    "        elif char == ')' or char == ']':\n"
+    "        elif char == ')' :\n",
+    "            while stack[-1] != '(':\n",
+    "                postfix.append(stack.pop())\n",
+    "            #error handling : check empty stack\n",
+    "            if not stack:\n",
+    "                raise ValueError('Parentheses mismatch : found \")\" in the stack without \"(\"')\n",
+    "            stack.pop()\n",
+    "        elif char == ']':\n",
+    "            while stack[-1] != '[':\n",
+    "                postfix.append(stack.pop())\n",
+    "            #error handling : check empty stack\n",
+    "            if not stack:\n",
+    "                raise ValueError('Parentheses mismatch : found \"]\" in the stack without \"[\"')\n",
+    "            stack.pop()\n",
+    "        #3. Operator: Pop operators from the stack and append them to the postfix list until an operator with lower precedence is found\n",
+    "        elif char in regex_operators_precedence:\n",
+    "            #checks:\n",
+    "            # 1. if the stack is not empty\n",
+    "            # 2. if the stack[-1] is an operator => meaning the last element in the stack is an operator\n",
+    "            # 3. if the precedence of the operator in the stack is greater than or equal to the precedence of the current operator\n",
+    "            while stack and stack[-1] in regex_operators_precedence and regex_operators_precedence[stack[-1]] >= regex_operators_precedence[char]:\n",
+    "                postfix.append(stack.pop())\n",
+    "            stack.append(char)\n",
+    "        #else: Append the character to the postfix list\n",
+    "        else:\n",
+    "            # A normal character => append it to the postfix list\n",
+    "            postfix.append(char)\n",
+    "        # empty the stack\n",
+    "    while stack:\n",
+    "        #error handling : check '(' in the stack\n",
+    "        if stack[-1] == '(':\n",
+    "            raise ValueError('Parentheses mismatch : found \"(\" in the stack without \")\"')\n",
+    "        postfix.append(stack.pop())\n",
+    "    return ''.join(postfix)\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After step 1 : [a-z|A-Z]+\n",
+      "i = 0, c = [\n",
+      "i = 1, c = a\n",
+      "i = 2, c = -\n",
+      "i = 52, c = |\n",
+      "i = 53, c = A\n",
+      "i = 54, c = -\n",
+      "i = 104, c = ]\n",
+      "i = 105, c = +\n",
+      "After step 2 : [a|b|c|d|e|f|g|h|i|j|k|l|m|n|o|p|q|r|s|t|u|v|w|x|y|z|A|B|C|D|E|F|G|H|I|J|K|L|M|N|O|P|Q|R|S|T|U|V|W|X|Y|Z]+\n",
+      "After step 3 : [a|b|c|d|e|f|g|h|i|j|k|l|m|n|o|p|q|r|s|t|u|v|w|x|y|z|A|B|C|D|E|F|G|H|I|J|K|L|M|N|O|P|Q|R|S|T|U|V|W|X|Y|Z]+ Preprocessed!\n",
+      "ab|c|d|e|f|g|h|i|j|k|l|m|n|o|p|q|r|s|t|u|v|w|x|y|z|A|B|C|D|E|F|G|H|I|J|K|L|M|N|O|P|Q|R|S|T|U|V|W|X|Y|Z|+\n",
+      "After step 1 : [f-p|0-9]+(a*bcd?|cde*)\n",
+      "i = 0, c = [\n",
+      "i = 1, c = f\n",
+      "i = 2, c = -\n",
+      "i = 22, c = |\n",
+      "i = 23, c = 0\n",
+      "i = 24, c = -\n",
+      "i = 42, c = ]\n",
+      "i = 43, c = +\n",
+      "i = 44, c = (\n",
+      "i = 45, c = a\n",
+      "i = 46, c = *\n",
+      "i = 47, c = b\n",
+      "i = 48, c = c\n",
+      "i = 49, c = d\n",
+      "i = 50, c = ?\n",
+      "i = 51, c = |\n",
+      "i = 52, c = c\n",
+      "i = 53, c = d\n",
+      "i = 54, c = e\n",
+      "i = 55, c = *\n",
+      "i = 56, c = )\n",
+      "After step 2 : [f|g|h|i|j|k|l|m|n|o|p|0|1|2|3|4|5|6|7|8|9]+(a*bcd?|cde*)\n",
+      "After step 3 : [f|g|h|i|j|k|l|m|n|o|p|0|1|2|3|4|5|6|7|8|9]+.(a*.b.c.d?.|c.d.e*) Preprocessed!\n",
+      "fg|h|i|j|k|l|m|n|o|p|0|1|2|3|4|5|6|7|8|9|+a*b.c.d?..cd.e*.|.\n",
+      "All test cases passed!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test cases\n",
+    "# ----------\n",
+    "def test (id,regex, expected_postfix):\n",
+    "    output =infix_to_postfix(regex)\n",
+    "    print(f\"Test case #{id} : {regex} received : {output} expected : {expected_postfix} => Passed\")\n",
+    "    assert output == expected_postfix\n",
+    "\n",
+    "# test(1,'a+b*c', 'a+b*.c.')\n",
+    "# test(2,'[a-z]+', 'a|b|c|d|e|f|g|h|i|j|k|l|m|n|o|p|q|r|s|t|u|v|w|x|y|z+')\n",
+    "print(infix_to_postfix('[a-zA-Z]+'))\n",
+    "print(infix_to_postfix('[f-p0-9]+(a*bcd?|cde*)'))\n",
+    "\n",
+    "\n",
+    "\n",
+    "print('All test cases passed!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Postfix to NFA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
