Complete nfa to dfa conversion

--- a/nfa_to_dfa/nfa_to_dfa.ipynb
+++ b/nfa_to_dfa/nfa_to_dfa.ipynb
@@ -2,14 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting graphviz\n",
+      "  Downloading graphviz-0.20.3-py3-none-any.whl (47 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m47.1/47.1 KB\u001b[0m \u001b[31m559.4 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: graphviz\n",
+      "Successfully installed graphviz-0.20.3\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install graphviz\n",
+    "from graphviz import Digraph"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "class edge:\n",
     "      def __init__(self):\n",
-    "        self.label=None\n",
-    "        self.destination=None\n",
+    "        self.label: str = None\n",
+    "        self.destination = None\n",
     "      def __str__(self):\n",
     "        return f\"edge {self.label} going to {self.destination}\""
    ]
@@ -22,63 +45,22 @@
    "source": [
     "class NFA_state:\n",
     "  def __init__(self):\n",
-    "    self.label=None\n",
-    "    self.out_edges=[]\n",
+    "    self.label: str = None\n",
+    "    self.out_edges: list[edge] = []\n",
     "\n",
-    "\n",
-    "  '''\n",
-    "  This function gets the direct neighbours from taking the Epsilon edge.\n",
-    "  just the direct neighbours.\n",
-    "  '''\n",
-    "  def get_epsilon_closure(self):\n",
-    "    closure = set()\n",
-    "    closure.add(self)\n",
-    "    for edge in self.out_edges:\n",
-    "      if edge.label == \"ε\":\n",
-    "        closure.add(edge.destination)\n",
-    "    return closure\n",
+    "  def __str__(self) -> str:\n",
+    "    return self.label\n",
     "  \n",
-    "  '''\n",
-    "    gets the direct neighbours from taking the Character input edge, just the direct neighbours.\n",
-    "  '''\n",
-    "  def get_char_closure(self, char):\n",
-    "    closure = set()\n",
-    "    for edge in self.out_edges:\n",
-    "      if edge.label == char:\n",
-    "        closure.add(edge.destination)\n",
-    "    return closure\n",
-    "  \n",
-    "  '''\n",
-    "    Returns a set of States reachable from taking Char edges recursively\n",
-    "  '''\n",
-    "  def get_reachable_states(self, char):\n",
-    "    reachable_states = set()\n",
-    "    for edge in self.out_edges:\n",
-    "      if edge.label == char:\n",
-    "        reachable_states.add(edge.destination)\n",
-    "        reachable_states = reachable_states.union(edge.destination.get_reachable_states(char))\n",
-    "    return reachable_states\n",
-    "  \n",
-    "  '''\n",
-    "    Returns a set of States reachable from taking Epsilon edges recursively\n",
-    "  '''\n",
-    "  def get_reachable_states_epsilon(self):\n",
-    "    reachable_states = set()\n",
-    "    for edge in self.out_edges:\n",
-    "      if edge.label == \"ε\":\n",
-    "        reachable_states.add(edge.destination)\n",
-    "        reachable_states = reachable_states.union(edge.destination.get_reachable_states_epsilon())\n",
-    "    return reachable_states\n",
-    "  \n",
-    "  \n",
-    "\n",
     "  def __repr__(self) -> str:\n",
     "     return self.label\n",
-    "  def __eq__(self, other):\n",
+    "  \n",
+    "  def __eq__(self, other) -> bool:\n",
     "    return other.label == self.label\n",
-    "  def __ne__(self, other):\n",
+    "  \n",
+    "  def __ne__(self, other) -> bool:\n",
     "    return other.label != self.label\n",
-    "  def __hash__(self):\n",
+    "  \n",
+    "  def __hash__(self) -> int:\n",
     "     return hash(self.label)"
    ]
   },
@@ -91,42 +73,13 @@
     "class NFA:\n",
     "\n",
     "    def __init__(self, initial, acc, inner):\n",
-    "        self.start = initial\n",
-    "        self.accept = acc\n",
-    "        self.inner_states = inner\n",
+    "        self.start: NFA_state = initial\n",
+    "        self.accept: NFA_state = acc\n",
+    "        self.inner_states: list[NFA_state] = inner\n",
     "\n",
     "    \n",
-    "    '''\n",
-    "        takes a SuperState and an input Character, \n",
-    "        gets the Char closure from all the substates in the SuperState,\n",
-    "        then makes a new list of reachable states (as a candidate new SuperState), returns this list\n",
-    "    '''\n",
-    "    def generate_new_superstate(self, super_state, char):\n",
-    "        reachable_states = set()\n",
-    "        for state in super_state:\n",
-    "            reachable_states = reachable_states.union(state.get_char_closure(char))\n",
-    "\n",
-    "        new_superstate = set()\n",
-    "        for state in reachable_states:\n",
-    "            new_superstate = new_superstate.union(state.get_epsilon_closure())\n",
-    "\n",
-    "\n",
-    "        return new_superstate\n",
-    "\n",
     "    def __repr__(self) ->str:\n",
     "      return self.start.label\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class DFA_Edge:\n",
-    "    def __init__(self):\n",
-    "      self.label = None\n",
-    "      self.destination = None"
    ]
   },
   {
@@ -136,80 +89,131 @@
    "outputs": [],
    "source": [
     "class SuperState:\n",
-    "    '''A superState is defined by a bunch of SubStates, a bunch of outgoing edges, and its label/ID,\n",
-    "      and 2 flags indicating whether or not this SuperState is starting or accepting\n",
-    "    '''\n",
-    "    def __init__(self):\n",
-    "        self.is_start = None          \n",
-    "        self.is_end = None            \n",
-    "        self.out_edges = []        \n",
-    "        self.sub_states = set()        \n",
-    "        self.label = None\n",
+    "  '''A superState is defined by a bunch of SubStates, a bunch of outgoing edges, and its label/ID,\n",
+    "    and 2 flags indicating whether or not this SuperState is starting or accepting\n",
+    "  '''\n",
+    "  def __init__(self):\n",
+    "      self.is_start: bool = False          \n",
+    "      self.is_end: bool = False            \n",
+    "      self.out_edges: list[edge] = []        \n",
+    "      self.sub_states: set[SuperState] = set()        \n",
+    "      self.label: str = None\n",
     "\n",
-    "    def get_labels(self):\n",
-    "      labels = []\n",
-    "      for s in self.sub_states:\n",
-    "        labels.append(s.label)\n",
-    "      return labels\n",
-    "\n",
-    "    def __eq__(self, other):\n",
-    "      set_of_src_labels = set()\n",
-    "      set_of_dst_labels = set()\n",
-    "      for s in self.sub_states:\n",
-    "        set_of_src_labels.add(s.label)\n",
-    "      for s in other.sub_states:\n",
-    "        set_of_dst_labels.add(s.label)\n",
-    "      return set_of_src_labels == set_of_dst_labels\n",
+    "  def get_labels(self) -> list[str]:\n",
+    "    labels = []\n",
+    "    for s in self.sub_states:\n",
+    "      labels.append(s.label)\n",
+    "    return labels\n",
     "    \n",
-    "    def __ne__(self, other):\n",
-    "      set_of_src_labels = set()\n",
-    "      set_of_dst_labels = set()\n",
-    "      for s in self.sub_states:\n",
-    "        set_of_src_labels.add(s.label)\n",
-    "      for s in other.sub_states:\n",
-    "        set_of_dst_labels.add(s.label)\n",
-    "      return set_of_src_labels != set_of_dst_labels\n",
+    "  '''\n",
+    "    gets the direct neighbours from taking the Character input edge, just the direct neighbours.\n",
+    "  '''\n",
+    "  def get_char_closure(self, char) -> set:  # set[SuperState]\n",
+    "    closure = set()\n",
+    "    for edge in self.out_edges:\n",
+    "      if edge.label == char:\n",
+    "        closure.add(edge.destination)\n",
+    "    return closure\n",
+    "  \n",
+    "  '''\n",
+    "    Returns a set of States reachable from taking Char edges recursively\n",
+    "  '''\n",
+    "  def get_reachable_states(self, char) -> set:  # set[SuperState]\n",
+    "    reachable_states = set()\n",
+    "    for edge in self.out_edges:\n",
+    "      if edge.label == char:\n",
+    "        reachable_states.add(edge.destination)\n",
+    "        reachable_states = reachable_states.union(edge.destination.get_reachable_states(char))\n",
+    "    return reachable_states\n",
+    "  \n",
+    "  '''\n",
+    "    Returns a set of States reachable from taking Epsilon edges recursively\n",
+    "  '''\n",
+    "  def get_epsilon_closure(self) -> set:  # set[SuperState]\n",
+    "    epsilon_closure = set()\n",
+    "    epsilon_closure.add(self)\n",
+    "    for edge in self.out_edges:\n",
+    "      if edge.label == \"ε\":\n",
+    "        epsilon_closure.add(edge.destination)\n",
+    "        epsilon_closure = epsilon_closure.union(edge.destination.get_epsilon_closure())\n",
+    "    return epsilon_closure\n",
+    "    \n",
+    "  def generate_new_superstate(self, char):\n",
+    "      reachable_states = set()\n",
+    "      for state in self.sub_states:\n",
+    "          reachable_states = reachable_states.union(state.get_char_closure(char))\n",
     "\n",
-    "    def __str__(self):\n",
-    "      if(self.sub_states):\n",
-    "        stringy = \"\"\n",
-    "        for sub in self.sub_states:\n",
-    "          stringy = stringy + str(sub) + \",\"\n",
-    "        return \"SuperState \" +stringy\n",
-    "      else:\n",
-    "        return \"Empty SuperState\"\n",
+    "      new_superstate = set()\n",
+    "      for state in reachable_states:\n",
+    "          new_superstate = new_superstate.union(state.get_epsilon_closure())\n",
     "\n",
-    "    def __repr__(self):\n",
-    "      if(self.sub_states):\n",
-    "        stringy = \"\"\n",
-    "        for sub in self.sub_states:\n",
-    "          stringy = stringy + str(sub) + \",\"\n",
-    "        return stringy\n",
-    "      else:\n",
-    "        return \"Empty SuperState\"\n",
     "\n",
-    "    def __hash__(self):\n",
-    "      if(self.sub_states):\n",
-    "        stringy = \" \"\n",
-    "        for sub in self.sub_states:\n",
-    "          stringy = stringy + str(sub) + \",\"\n",
-    "        return hash(\"SuperState\" +stringy)\n",
-    "      else:\n",
-    "        return hash(None)"
+    "      # create a new superstate with the new states\n",
+    "      new_super = SuperState()\n",
+    "      new_super.sub_states = new_superstate\n",
+    "      return new_super\n",
+    "\n",
+    "  def __eq__(self, other):\n",
+    "    set_of_src_labels = set()\n",
+    "    set_of_dst_labels = set()\n",
+    "    for s in self.sub_states:\n",
+    "      set_of_src_labels.add(s.label)\n",
+    "    for s in other.sub_states:\n",
+    "      set_of_dst_labels.add(s.label)\n",
+    "    return set_of_src_labels == set_of_dst_labels\n",
+    "  \n",
+    "  def __ne__(self, other):\n",
+    "    set_of_src_labels = set()\n",
+    "    set_of_dst_labels = set()\n",
+    "    for s in self.sub_states:\n",
+    "      set_of_src_labels.add(s.label)\n",
+    "    for s in other.sub_states:\n",
+    "      set_of_dst_labels.add(s.label)\n",
+    "    return set_of_src_labels != set_of_dst_labels\n",
+    "\n",
+    "  def __str__(self):\n",
+    "    if(self.sub_states):\n",
+    "      stringy = \"\"\n",
+    "      for sub in self.sub_states:\n",
+    "        stringy = stringy + str(sub) + \",\"\n",
+    "      return \"SuperState \" +stringy\n",
+    "    else:\n",
+    "      return \"Empty SuperState\"\n",
+    "\n",
+    "  def __repr__(self):\n",
+    "    if(self.sub_states):\n",
+    "      stringy = \"\"\n",
+    "      for sub in self.sub_states:\n",
+    "        stringy = stringy + str(sub) + \",\"\n",
+    "      return stringy\n",
+    "    else:\n",
+    "      return \"Empty SuperState\"\n",
+    "\n",
+    "  def __hash__(self):\n",
+    "    if(self.sub_states):\n",
+    "      stringy = \" \"\n",
+    "      for sub in self.sub_states:\n",
+    "        stringy = stringy + str(sub) + \",\"\n",
+    "      return hash(\"SuperState\" +stringy)\n",
+    "    else:\n",
+    "      return hash(None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "class DFA:\n",
     "    ''' A DFA object contains a set of SuperStates, also a pointer to the starting SuperState and a set of the accept SuperState'''\n",
     "    def __init__(self):\n",
-    "        self.start_super_state = None          \n",
-    "        self.end_super_states = set()              \n",
-    "        self.super_states = set() \n",
+    "        self.start_super_state: SuperState = None          \n",
+    "        self.super_states: set[SuperState] = set() \n",
+    "        self.accept_super_states: set[SuperState] = set()\n",
+    "\n",
+    "    \n",
+    "                      \n",
     "\n",
     "    '''Just makes a new empty DFA, and a legit SuperState then insert this initial SuperState into the Empty DFA then return the DFA'''\n",
     "    def __init__(self, nfa: NFA):\n",
@@ -220,14 +224,14 @@
     "      self.start_super_state.sub_states = nfa.start.get_epsilon_closure()\n",
     "      self.start_super_state.out_edges = []\n",
     "      self.super_states.add(self.start_super_state)\n",
-    "      self.end_super_states = set()\n",
+    "      self.accept_super_states = set()\n",
     "\n",
     "      \n",
     "    '''takes a list of states, returns the matching SuperState if the list already'''\n",
-    "    def get_super_state(self, states):\n",
-    "      for super_state in self.super_states:\n",
-    "        if super_state.sub_states == states:\n",
-    "          return super_state\n",
+    "    def get_super_state(self, super_state: SuperState):\n",
+    "      for ss in self.super_states:\n",
+    "        if ss == super_state:\n",
+    "          return ss\n",
     "      return None\n",
     "\n",
     "    def __eq__(self, other):\n",
@@ -240,7 +244,61 @@
     "    def empt(self):\n",
     "      self.start_super_state = SuperState()          \n",
     "      self.end_super_state = set()             \n",
-    "      self.super_states = set()             "
+    "      self.super_states = set()\n",
+    "\n",
+    "    def visualize(self):\n",
+    "      gra = Digraph(graph_attr={'rankdir':'LR', \"label\":\"DFA\"})\n",
+    "      id = 0\n",
+    "      for SSTT in self.super_states:\n",
+    "        if(SSTT.is_start):\n",
+    "          gra.node(\"\", _attributes={'shape' : 'none'})\n",
+    "          gra.edge(\"\", SSTT.label)\n",
+    "        if(SSTT.is_end):\n",
+    "          gra.node(SSTT.label, _attributes={'peripheries' : '2'})\n",
+    "        else:\n",
+    "          gra.node(SSTT.label)\n",
+    "        id = id + 1\n",
+    "        \n",
+    "      for SSTT in self.super_states:\n",
+    "        for edg in SSTT.out_edges:\n",
+    "          gra.edge(SSTT.label , edg.destination.label, label=edg.label)\n",
+    "\n",
+    "      gra.format = 'png'\n",
+    "      gra.render('DFA', view= True)\n",
+    "      return gra.source\n",
+    "       \n",
+    "\n",
+    "\n",
+    "def powerset_construction(nfa: NFA, alphabet: str) -> DFA:\n",
+    "    dfa = DFA(nfa)\n",
+    "    unmarked_states = set()\n",
+    "    unmarked_states.add(dfa.start_super_state)\n",
+    "\n",
+    "    while unmarked_states:\n",
+    "        current_super_state:SuperState = unmarked_states.pop()\n",
+    "        for char in alphabet:\n",
+    "            generated_super_state = current_super_state.generate_new_superstate(char)\n",
+    "            if generated_super_state:\n",
+    "                existing_super_state = dfa.get_super_state(generated_super_state)\n",
+    "                if not existing_super_state:\n",
+    "                    new_super_state = SuperState()\n",
+    "                    new_super_state.sub_states = generated_super_state.sub_states\n",
+    "                    new_super_state.label = \"S\" + str(len(dfa.super_states))\n",
+    "                    dfa.super_states.add(new_super_state)\n",
+    "                    unmarked_states.add(new_super_state)\n",
+    "                    current_super_state.out_edges.append(edge(char, new_super_state)) \n",
+    "                else:\n",
+    "                    current_super_state.out_edges.append(edge(char, existing_super_state))\n",
+    "\n",
+    "    for super_state in dfa.super_states:\n",
+    "        for sub_state in super_state.sub_states:\n",
+    "            if sub_state == nfa.accept:\n",
+    "                super_state.is_end = True\n",
+    "                dfa.accept_super_states.add(super_state)\n",
+    "\n",
+    "    return dfa\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -248,7 +306,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "  "
+   ]
   }
  ],
  "metadata": {
